--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Malik | Resto</title>
 </head>
 <body>
+<h1>flexbox backroads</h1>
+<!-- header  -->
+<!-- end of header  -->
 
+<!-- about section -->
+<!-- end of about section -->
+
+<!-- services -->
+<!--end services -->
+
+<!-- featured tours -->
+<!-- end of featured tours -->
+
+<!-- contact -->
+
+<!-- end of contact -->
+
+<!-- gallery  -->
+
+<!-- end of gallery  -->
+
+<!-- footer -->
+
+<!-- js -->
+<script src="./js/app.js"></script>
 </body>
 </html>
