menambahkan html pada bagian header

--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" href="./images/favicon.svg" type="image/x-icon">
+    <link rel="alternate icon" class="js-site-favicon" type="image/png" href="./images/favicon.ico">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Malik | Resto</title>
 </head>
 <body>
 <h1>flexbox backroads</h1>
 <!-- header  -->
+<header>
+<!--    navigation-->
+<!--    banner-->
+    <div class="banner">
+        <div class="image-banner-container">
+            <img src="" alt="">
+            <h1>Malik | Resto</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus amet dolores earum fugit hic ipsum molestias natus unde. Alias aspernatur atque commodi consequatur ea numquam quis repudiandae similique totam?</p>
+            <a href="#ke-atas" class="btn ">lihat Menu</a>
+        </div>
+    </div>
+</header>
 <!-- end of header  -->
 
 <!-- about section -->
