menambahkan csss ke bagian banner

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 <body>
 <h1>flexbox backroads</h1>
 <!-- header  -->
-<header>
+<header class="home">
 <!--    navigation-->
 <!--    banner-->
     <div class="banner">
-        <div class="image-banner-container">
-            <img src="" alt="">
+        <div class="banner-container">
             <h1>Malik | Resto</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus amet dolores earum fugit hic ipsum molestias natus unde. Alias aspernatur atque commodi consequatur ea numquam quis repudiandae similique totam?</p>
-            <a href="#ke-atas" class="btn ">lihat Menu</a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dignissimos earum enim fugit magnam maiores .</p>
+            <a href="#ke-atas" class="btn hero-btn">lihat Menu</a>
         </div>
     </div>
 </header>
