--- a/index.html
+++ b/index.html
@@ -1,50 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="./images/favicon.svg" type="image/x-icon">
-    <link rel="alternate icon" class="js-site-favicon" type="image/png" href="./images/favicon.ico">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="shortcut icon" href="./images/favicon.svg" type="image/x-icon" />
+    <link
+      rel="alternate icon"
+      class="js-site-favicon"
+      type="image/png"
+      href="./images/favicon.ico"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Malik | Resto</title>
-</head>
-<body>
-<h1>flexbox backroads</h1>
-<!-- header  -->
-<header class="home">
-<!--    navigation-->
-<!--    banner-->
-    <div class="banner">
+  </head>
+  <body>
+    <h1>flexbox backroads</h1>
+    <!-- header  -->
+    <header class="home">
+      <!--    navigation-->
+      <!--    banner-->
+      <div class="banner">
         <div class="banner-container">
-            <h1>Malik | Resto</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dignissimos earum enim fugit magnam maiores .</p>
-            <a href="#ke-atas" class="btn hero-btn">lihat Menu</a>
+          <h1>Malik | Resto</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
+            dignissimos earum enim fugit magnam maiores .
+          </p>
+          <a href="#" class="btn hero-btn">lihat Menu</a>
         </div>
-    </div>
-</header>
-<!-- end of header  -->
+      </div>
+    </header>
+    <!-- end of header  -->
 
-<!-- about section -->
-<!-- end of about section -->
+    <!-- about section -->
+    <section>
+      <!--    heading about-->
+      <div class="about-heading">
+        <h2>About <span>Us</span></h2>
+      </div>
+      <!--    about content-->
+      <div class="section-center">
+        <div class="about-content">
+          <div class="about-image">
+            <img src="./images/about.jpeg" alt="about malik restaurant" />
+          </div>
+          <div class="about-info">
+            <h3>Taste the King flavour</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Accusamus architecto consequatur eius ex ipsum iure nam nisi, odio
+              placeat praesentium, qui saepe tempora voluptates.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Accusamus architecto consequatur eius ex ipsum iure nam nisi, odio
+              placeat praesentium, qui saepe tempora voluptates.
+            </p>
+            <a href="#" class="btn">Lihat Menu</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of about section -->
 
-<!-- services -->
-<!--end services -->
+    <!-- services -->
+    <!--end services -->
 
-<!-- featured tours -->
-<!-- end of featured tours -->
+    <!-- featured tours -->
+    <!-- end of featured tours -->
 
-<!-- contact -->
+    <!-- contact -->
 
-<!-- end of contact -->
+    <!-- end of contact -->
 
-<!-- gallery  -->
+    <!-- gallery  -->
 
-<!-- end of gallery  -->
+    <!-- end of gallery  -->
 
-<!-- footer -->
+    <!-- footer -->
 
-<!-- js -->
-<script src="./js/app.js"></script>
-</body>
+    <!-- js -->
+    <script src="./js/app.js"></script>
+  </body>
 </html>
