menambahkan css ke about sectiom dan menambahkan layout setting menggunakan flexbox dengan media screen lebih lebar

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
     <!-- end of header  -->
 
     <!-- about section -->
-    <section >
+    <section class="section-center ">
       <!--    heading about-->
       <div class="about-heading">
         <h2 >About <span >Us</span ></h2 >
       </div >
 	    <!--    about content-->
-      <div class="section-center">
-        <div class="about-content">
+      <div >
+        <div class="about-content about-center">
           <div class="about-image">
-            <img src="./images/about.jpeg" alt="about malik restaurant" />
+            <img class="image-photo-about" src="./images/about.jpeg" alt="about malik restaurant" />
           </div >
           <div class="about-info">
-            <h3 >Taste the King flavour</h3 >
+            <h2 >Taste the King flavour</h2 >
             <p >
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Accusamus architecto consequatur eius ex ipsum iure nam nisi, odio
