--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		    href="./images/favicon.ico"
     />
     <link rel="stylesheet" href="./style/style.css" />
+    <script src="https://kit.fontawesome.com/47eb3b40e8.js" crossorigin="anonymous"></script>
     <title >Malik | Resto</title >
   </head >
   <body >
@@ -36,7 +37,7 @@
     <!-- about section -->
     <section class="section-center ">
       <!--    heading about-->
-      <div class="about-heading">
+      <div class="section-title">
         <h2 >About <span >Us</span ></h2 >
       </div >
 	    <!--    about content-->
@@ -65,6 +66,40 @@
     <!-- end of about section -->
 
     <!-- services -->
+    <section class="section-center">
+      <!--        section-title-->
+      <div class="section-title">
+        <h2 >our <span>services</span></h2>
+      </div>
+<!--      services item.-->
+    <div class="services">
+<!--      item- 1-->
+      <div class="services-item">
+        <span><i class="fas fa-utensils"></i></span>
+        <div class="service-info">
+          <h3>menu pilihan</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus impedit ipsum magnam magni nisi repellendus.</p>
+        </div>
+      </div>
+<!--      end of item 1--><!--      item- 1-->
+      <div class="services-item">
+        <span><i class="fas fa-money-bill-wave-alt"></i></span>
+        <div class="service-info">
+          <h3>pas di kantong</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus impedit ipsum magnam magni nisi repellendus.</p>
+        </div>
+      </div>
+<!--      end of item 1--><!--      item- 1-->
+      <div class="services-item">
+        <span><i class="fas fa-camera"></i></span>
+        <div class="service-info">
+          <h3>instagramable</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus impedit ipsum magnam magni nisi repellendus.</p>
+        </div>
+      </div>
+<!--      end of item 1-->
+    </div>
+    </section>
     <!--end services -->
 
     <!-- featured tours -->
