menambahkan html pada bagina services malik resto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title >Malik | Resto</title >
   </head >
   <body >
-    <h1 >flexbox backroads</h1 >
+    <h1 >Malik | resto</h1 >
     <!-- header  -->
     <header class="home">
       <!--    navigation-->
@@ -64,9 +64,9 @@
       </div >
     </section >
     <!-- end of about section -->
-
     <!-- services -->
-    <section class="section-center">
+    <section class="bgr-services">
+      <div class="section-center">
       <!--        section-title-->
       <div class="section-title">
         <h2 >our <span>services</span></h2>
@@ -75,7 +75,7 @@
     <div class="services">
 <!--      item- 1-->
       <div class="services-item">
-        <span><i class="fas fa-utensils"></i></span>
+        <span class="service-icon"><i class="fas fa-utensils"></i></span>
         <div class="service-info">
           <h3>menu pilihan</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus impedit ipsum magnam magni nisi repellendus.</p>
@@ -83,7 +83,7 @@
       </div>
 <!--      end of item 1--><!--      item- 1-->
       <div class="services-item">
-        <span><i class="fas fa-money-bill-wave-alt"></i></span>
+        <span class="service-icon"><i class="fas fa-money-bill-wave-alt"></i></span>
         <div class="service-info">
           <h3>pas di kantong</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus impedit ipsum magnam magni nisi repellendus.</p>
@@ -91,7 +91,7 @@
       </div>
 <!--      end of item 1--><!--      item- 1-->
       <div class="services-item">
-        <span><i class="fas fa-camera"></i></span>
+        <span class="service-icon"><i class="fas fa-camera"></i></span>
         <div class="service-info">
           <h3>instagramable</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus impedit ipsum magnam magni nisi repellendus.</p>
@@ -99,6 +99,7 @@
       </div>
 <!--      end of item 1-->
     </div>
+        </div>
     </section>
     <!--end services -->
 
