--- a/index.html
+++ b/index.html
@@ -1,109 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head >
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" href="./images/favicon.svg" type="image/x-icon" />
     <link
-		    rel="alternate icon"
-		    class="js-site-favicon"
-		    type="image/png"
-		    href="./images/favicon.ico"
+      rel="alternate icon"
+      class="js-site-favicon"
+      type="image/png"
+      href="./images/favicon.ico"
     />
     <link rel="stylesheet" href="./style/style.css" />
-    <script src="https://kit.fontawesome.com/47eb3b40e8.js" crossorigin="anonymous"></script>
-    <title >Malik | Resto</title >
-  </head >
-  <body >
-    <h1 >Malik | resto</h1 >
+    <script
+      src="https://kit.fontawesome.com/47eb3b40e8.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Malik | Resto</title>
+  </head>
+  <body>
+    <h1>Malik | resto</h1>
     <!-- header  -->
     <header class="home">
       <!--    navigation-->
-	    <!--    banner-->
+      <!--    banner-->
       <div class="banner">
         <div class="banner-container">
-          <h1 >Malik | Resto</h1 >
-          <p >
+          <h1>Malik | Resto</h1>
+          <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
             dignissimos earum enim fugit magnam maiores .
-          </p >
-          <a href="#" class="btn hero-btn">lihat Menu</a >
-        </div >
-      </div >
-    </header >
+          </p>
+          <a href="#" class="btn hero-btn">lihat Menu</a>
+        </div>
+      </div>
+    </header>
     <!-- end of header  -->
 
     <!-- about section -->
-    <section class="section-center ">
+    <section class="section-center">
       <!--    heading about-->
       <div class="section-title">
-        <h2 >About <span >Us</span ></h2 >
-      </div >
-	    <!--    about content-->
-      <div >
+        <h2>About <span>Us</span></h2>
+      </div>
+      <!--    about content-->
+      <div>
         <div class="about-content about-center">
           <div class="about-image">
-            <img class="image-photo-about" src="./images/about.jpeg" alt="about malik restaurant" />
-          </div >
+            <img
+              class="image-photo-about"
+              src="./images/about.jpeg"
+              alt="about malik restaurant"
+            />
+          </div>
           <div class="about-info">
-            <h2 >Taste the King flavour</h2 >
-            <p >
+            <h2>Taste the King flavour</h2>
+            <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Accusamus architecto consequatur eius ex ipsum iure nam nisi, odio
               placeat praesentium, qui saepe tempora voluptates.
-            </p >
-            <p >
+            </p>
+            <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Accusamus architecto consequatur eius ex ipsum iure nam nisi, odio
               placeat praesentium, qui saepe tempora voluptates.
-            </p >
-            <a href="#" class="btn">Lihat Menu</a >
-          </div >
-        </div >
-      </div >
-    </section >
+            </p>
+            <a href="#" class="btn">Lihat Menu</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- end of about section -->
     <!-- services -->
     <section class="bgr-services">
       <div class="section-center">
-      <!--        section-title-->
-      <div class="section-title">
-        <h2 >our <span>services</span></h2>
-      </div>
-<!--      services item.-->
-    <div class="services">
-<!--      item- 1-->
-      <div class="services-item">
-        <span class="service-icon"><i class="fas fa-utensils"></i></span>
-        <div class="service-info">
-          <h3>menu pilihan</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus impedit ipsum magnam magni nisi repellendus.</p>
+        <!--        section-title-->
+        <div class="section-title">
+          <h2>our <span>services</span></h2>
+        </div>
+        <!--      services item.-->
+        <div class="services">
+          <!--      item- 1-->
+          <div class="services-item">
+            <span class="service-icon"><i class="fas fa-utensils"></i></span>
+            <div class="service-info">
+              <h3>menu pilihan</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Delectus impedit ipsum magnam magni nisi repellendus.
+              </p>
+            </div>
+          </div>
+          <!--      end of item 1--><!--      item- 1-->
+          <div class="services-item">
+            <span class="service-icon"
+              ><i class="fas fa-money-bill-wave-alt"></i
+            ></span>
+            <div class="service-info">
+              <h3>pas di kantong</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Delectus impedit ipsum magnam magni nisi repellendus.
+              </p>
+            </div>
+          </div>
+          <!--      end of item 1--><!--      item- 1-->
+          <div class="services-item">
+            <span class="service-icon"><i class="fas fa-camera"></i></span>
+            <div class="service-info">
+              <h3>instagramable</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Delectus impedit ipsum magnam magni nisi repellendus.
+              </p>
+            </div>
+          </div>
+          <!--      end of item 1-->
         </div>
       </div>
-<!--      end of item 1--><!--      item- 1-->
-      <div class="services-item">
-        <span class="service-icon"><i class="fas fa-money-bill-wave-alt"></i></span>
-        <div class="service-info">
-          <h3>pas di kantong</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus impedit ipsum magnam magni nisi repellendus.</p>
-        </div>
-      </div>
-<!--      end of item 1--><!--      item- 1-->
-      <div class="services-item">
-        <span class="service-icon"><i class="fas fa-camera"></i></span>
-        <div class="service-info">
-          <h3>instagramable</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus impedit ipsum magnam magni nisi repellendus.</p>
-        </div>
-      </div>
-<!--      end of item 1-->
-    </div>
-        </div>
     </section>
     <!--end services -->
 
     <!-- featured tours -->
+    <section class="section-center">
+      <!--      section title-->
+      <div class="section-title">
+        <h2>menu<span>malik</span></h2>
+      </div>
+      <!--      menu item-->
+      <div class="menu-items">
+        <div class="gambar-container">
+          <img
+            class="gambar-menu"
+            src="./images/resto-1.jpg"
+            alt="menu malik resto"
+          />
+          <p>August 14th, 2019</p>
+        </div>
+        <div class="manu-info">
+          <h3>rendang</h3>
+          <i class="fas fa-drumstick-bite"></i>
+          <p>start from <br />Rp10.000</p>
+        </div>
+      </div>
+      <!--      end of menu item--><!--      menu item-->
+      <div class="menu-items">
+        <div class="gambar-container">
+          <img
+            class="gambar-menu"
+            src="./images/resto-1.jpg"
+            alt="menu malik resto"
+          />
+          <p>August 14th, 2019</p>
+        </div>
+        <div class="manu-info">
+          <h3>rendang</h3>
+          <i class="fas fa-drumstick-bite"></i>
+          <p>start from <br />Rp10.000</p>
+        </div>
+      </div>
+      <!--      end of menu item--><!--      menu item-->
+      <div class="menu-items">
+        <div class="gambar-container">
+          <img
+            class="gambar-menu"
+            src="./images/resto-1.jpg"
+            alt="menu malik resto"
+          />
+          <p>August 14th, 2019</p>
+        </div>
+        <div class="manu-info">
+          <h3>rendang</h3>
+          <i class="fas fa-drumstick-bite"></i>
+          <p>start from <br />Rp10.000</p>
+        </div>
+      </div>
+      <!--      end of menu item--><!--      menu item-->
+      <div class="menu-items">
+        <div class="gambar-container">
+          <img
+            class="gambar-menu"
+            src="./images/resto-1.jpg"
+            alt="menu malik resto"
+          />
+          <p>August 14th, 2019</p>
+        </div>
+        <div class="manu-info">
+          <h3>rendang</h3>
+          <i class="fas fa-drumstick-bite"></i>
+          <p>start from <br />Rp10.000</p>
+        </div>
+      </div>
+      <!--      end of menu item--><!--      menu item-->
+      <div class="menu-items">
+        <div class="gambar-container">
+          <img
+            class="gambar-menu"
+            src="./images/resto-1.jpg"
+            alt="menu malik resto"
+          />
+          <p>August 14th, 2019</p>
+        </div>
+        <div class="manu-info">
+          <h3>rendang</h3>
+          <i class="fas fa-drumstick-bite"></i>
+          <p>start from <br />Rp10.000</p>
+        </div>
+      </div>
+      <!--      end of menu item-->
+    </section>
     <!-- end of featured tours -->
 
     <!-- contact -->
@@ -117,6 +222,6 @@
     <!-- footer -->
 
     <!-- js -->
-    <script src="./js/app.js"></script >
-  </body >
-</html >
+    <script src="./js/app.js"></script>
+  </body>
+</html>
