menambahkan css dan setting flexbox pada bagian menu malik resto

--- a/index.html
+++ b/index.html
@@ -125,89 +125,139 @@
     <section class="section-center">
       <!--      section title-->
       <div class="section-title">
-        <h2>menu<span>malik</span></h2>
+        <h2>menu | <span>malik</span></h2>
       </div>
       <!--      menu item-->
-      <div class="menu-items">
-        <div class="gambar-container">
-          <img
-            class="gambar-menu"
-            src="./images/resto-1.jpg"
-            alt="menu malik resto"
-          />
-          <p>August 14th, 2019</p>
+      <div class="menu-container">
+        <div class="menu-items">
+          <div class="gambar-container">
+            <img
+              class="gambar-menu"
+              src="./images/resto-1.jpg"
+              alt="menu malik resto"
+            />
+            <p class="tanggal-menu">August 14th, 2019</p>
+          </div>
+          <div class="manu-info">
+            <h3>rendang</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+              blanditiis consequuntur dicta ea eius excepturi modi quam quis
+              sapiente velit.
+            </p>
+            <div class="harga-menu">
+              <h4>
+                <span><i class="fas fa-drumstick-bite"></i> </span>sapi
+              </h4>
+              <p>start from <br />Rp20.000</p>
+            </div>
+          </div>
         </div>
-        <div class="manu-info">
-          <h3>rendang</h3>
-          <i class="fas fa-drumstick-bite"></i>
-          <p>start from <br />Rp10.000</p>
+        <!--      end of menu item--><!--      menu item-->
+        <div class="menu-items">
+          <div class="gambar-container">
+            <img
+              class="gambar-menu"
+              src="./images/resto-2.jpg"
+              alt="menu malik resto"
+            />
+            <p class="tanggal-menu">October 21th, 2019</p>
+          </div>
+          <div class="manu-info">
+            <h3>soto</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+              blanditiis consequuntur dicta ea eius excepturi modi quam quis
+              sapiente velit.
+            </p>
+
+            <div class="harga-menu">
+              <h4>
+                <span><i class="fas fa-drumstick-bite"></i> </span>ayam
+              </h4>
+              <p>start from <br />Rp15.000</p>
+            </div>
+          </div>
         </div>
+        <!--      end of menu item--><!--      menu item-->
+        <div class="menu-items">
+          <div class="gambar-container">
+            <img
+              class="gambar-menu"
+              src="./images/resto-3.jpg"
+              alt="menu malik resto"
+            />
+            <p class="tanggal-menu">January 3th, 2019</p>
+          </div>
+          <div class="manu-info">
+            <h3>nasi goreng</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+              blanditiis consequuntur dicta ea eius excepturi modi quam quis
+              sapiente velit.
+            </p>
+
+            <div class="harga-menu">
+              <h4>
+                <span><i class="fas fa-drumstick-bite"></i> </span>telur
+              </h4>
+              <p>start from <br />Rp10.000</p>
+            </div>
+          </div>
+        </div>
+        <!--      end of menu item--><!--      menu item-->
+        <div class="menu-items">
+          <div class="gambar-container">
+            <img
+              class="gambar-menu"
+              src="./images/resto-4.jpg"
+              alt="menu malik resto"
+            />
+            <p class="tanggal-menu">March 30th, 2019</p>
+          </div>
+          <div class="manu-info">
+            <h3>ayam geprek</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+              blanditiis consequuntur dicta ea eius excepturi modi quam quis
+              sapiente velit.
+            </p>
+            <div class="harga-menu">
+              <h4>
+                <span><i class="fas fa-drumstick-bite"></i> </span>ayam
+              </h4>
+              <p>start from <br />Rp12.000</p>
+            </div>
+          </div>
+        </div>
+        <!--      end of menu item--><!--      menu item-->
+        <div class="menu-items">
+          <div class="gambar-container">
+            <img
+              class="gambar-menu"
+              src="./images/resto-5.jpg"
+              alt="menu malik resto"
+            />
+            <p class="tanggal-menu">May 14th, 2019</p>
+          </div>
+          <div class="manu-info">
+            <h3>seblak</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+              blanditiis consequuntur dicta ea eius excepturi modi quam quis
+              sapiente velit.
+            </p>
+
+            <div class="harga-menu">
+              <h4>
+                <span><i class="fas fa-drumstick-bite"></i> </span>kerupuk
+              </h4>
+              <p>start from <br />Rp10.000</p>
+            </div>
+          </div>
+        </div>
+        <!--      end of menu item-->
       </div>
-      <!--      end of menu item--><!--      menu item-->
-      <div class="menu-items">
-        <div class="gambar-container">
-          <img
-            class="gambar-menu"
-            src="./images/resto-1.jpg"
-            alt="menu malik resto"
-          />
-          <p>August 14th, 2019</p>
-        </div>
-        <div class="manu-info">
-          <h3>rendang</h3>
-          <i class="fas fa-drumstick-bite"></i>
-          <p>start from <br />Rp10.000</p>
-        </div>
-      </div>
-      <!--      end of menu item--><!--      menu item-->
-      <div class="menu-items">
-        <div class="gambar-container">
-          <img
-            class="gambar-menu"
-            src="./images/resto-1.jpg"
-            alt="menu malik resto"
-          />
-          <p>August 14th, 2019</p>
-        </div>
-        <div class="manu-info">
-          <h3>rendang</h3>
-          <i class="fas fa-drumstick-bite"></i>
-          <p>start from <br />Rp10.000</p>
-        </div>
-      </div>
-      <!--      end of menu item--><!--      menu item-->
-      <div class="menu-items">
-        <div class="gambar-container">
-          <img
-            class="gambar-menu"
-            src="./images/resto-1.jpg"
-            alt="menu malik resto"
-          />
-          <p>August 14th, 2019</p>
-        </div>
-        <div class="manu-info">
-          <h3>rendang</h3>
-          <i class="fas fa-drumstick-bite"></i>
-          <p>start from <br />Rp10.000</p>
-        </div>
-      </div>
-      <!--      end of menu item--><!--      menu item-->
-      <div class="menu-items">
-        <div class="gambar-container">
-          <img
-            class="gambar-menu"
-            src="./images/resto-1.jpg"
-            alt="menu malik resto"
-          />
-          <p>August 14th, 2019</p>
-        </div>
-        <div class="manu-info">
-          <h3>rendang</h3>
-          <i class="fas fa-drumstick-bite"></i>
-          <p>start from <br />Rp10.000</p>
-        </div>
-      </div>
-      <!--      end of menu item-->
     </section>
     <!-- end of featured tours -->
 
