menambahkan html ke bagian contact form untuk email subscription

--- a/index.html
+++ b/index.html
@@ -262,7 +262,18 @@
     <!-- end of featured tours -->
 
     <!-- contact -->
-
+    <section class="contact-container">
+      <div class="section-center contact">
+        <article class="contact-info">
+          <h3>Mau info terbaru dari kami ?</h3>
+          <p>Masukkan email kamu, kami akan kirimkan kabar terbaru</p>
+        </article>
+        <form action="#" class="email-container">
+          <input type="email" class="email-input" placeholder=" Email Kamu" />
+          <button class="btn-contact">Subscribe</button>
+        </form>
+      </div>
+    </section>
     <!-- end of contact -->
 
     <!-- gallery  -->
