--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       type="image/png"
       href="./images/favicon.ico"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style/style.css" />
     <script
       src="https://kit.fontawesome.com/47eb3b40e8.js"
@@ -269,7 +275,13 @@
           <p>Masukkan email kamu, kami akan kirimkan kabar terbaru</p>
         </article>
         <form action="#" class="email-container">
-          <input type="email" class="email-input" placeholder=" Email Kamu" />
+          <label for="email-input"></label>
+          <input
+            type="email"
+            id="email-input"
+            class="email-input"
+            placeholder=" Email Kamu"
+          />
           <button class="btn-contact">Subscribe</button>
         </form>
       </div>
@@ -277,7 +289,62 @@
     <!-- end of contact -->
 
     <!-- gallery  -->
-
+    <section id="gallery">
+      <div class="fb-gallery">
+        <!--        single img-->
+        <div class="img-gl-container">
+          <img class="img-gallery" src="./images/resto-6.jpg" alt="" />
+          <i class="fas fa-search-plus icon-gallery"></i>
+        </div>
+        <!--        end of single image-->
+        <!--        single img-->
+        <div class="img-gl-container">
+          <img class="img-gallery" src="./images/resto-5.jpg" alt="" />
+          <i class="fas fa-search-plus icon-gallery"></i>
+        </div>
+        <!--        end of single image-->
+        <!--        single img-->
+        <div class="img-gl-container">
+          <img class="img-gallery" src="./images/resto-4.jpg" alt="" />
+          <i class="fas fa-search-plus icon-gallery"></i>
+        </div>
+        <!--        end of single image-->
+        <!--        single img-->
+        <div class="img-gl-container">
+          <img class="img-gallery" src="./images/resto-3.jpg" alt="" />
+          <i class="fas fa-search-plus icon-gallery"></i>
+        </div>
+        <!--        end of single image-->
+        <!--        single img-->
+        <div class="img-gl-container">
+          <img class="img-gallery" src="./images/resto-2.jpg" alt="" />
+          <i class="fas fa-search-plus icon-gallery"></i>
+        </div>
+        <!--        end of single image-->
+        <!--        single img-->
+        <div class="img-gl-container">
+          <img class="img-gallery" src="./images/resto-1.jpg" alt="" />
+          <i class="fas fa-search-plus icon-gallery"></i>
+        </div>
+        <!--        end of single image-->
+        <!--        single img-->
+        <div class="img-gl-container">
+          <img class="img-gallery" src="./images/resto-6.jpg" alt="" />
+          <i class="fas fa-search-plus icon-gallery"></i>
+        </div>
+        <!--        end of single image-->
+        <!--        single img-->
+        <div class="img-gl-container">
+          <img
+            class="img-gallery"
+            src="./images/resto-5.jpg"
+            alt=""
+          />
+          <i class="fas fa-search-plus icon-gallery"></i>
+        </div>
+        <!--        end of single image-->
+      </div>
+    </section>
     <!-- end of gallery  -->
 
     <!-- footer -->
