menambahkan css ke bagian navigation dan toggle nav

--- a/index.html
+++ b/index.html
@@ -25,25 +25,26 @@
     <title>Malik | Resto</title>
   </head>
   <body>
-    <h1>Malik | resto</h1>
+    <!--    <h1>Malik | resto</h1>-->
     <!-- header  -->
     <header class="home" id="home">
       <!--    navigation-->
-      <nav>
+      <nav class="navigation">
         <div class="nav-center">
           <!--          nav-header-->
           <div class="nav-header">
-            <img
-              class="logo-resto"
-              src="./images/logo.png"
-              alt="logo malik resto"
-            />
-            <button>
+            <a href="https://www.malikabd.com">
+              <img
+                class="logo-resto"
+                src="./images/logo.png"
+                alt="logo malik resto"
+            /></a>
+            <button class="nav-button" id="nav-toggle">
               <i class="fas fa-bars"></i>
             </button>
           </div>
           <!--          nav links-->
-          <ul class="nav-links">
+          <ul class="nav-links" id="nav-links">
             <!-- single link -->
             <li>
               <a href="#home" class="nav-link scroll-link">home</a>
@@ -71,42 +72,42 @@
             <!-- end of single link -->
           </ul>
           <!-- end of nav links -->
-<!--          nav icon-->
+          <!--          nav icon-->
           <ul class="nav-icons">
-        <!-- single icon -->
-        <li>
-          <a
-                  href="https://www.facebook.com/malikabdullah.me"
-                  target="_blank"
-                  class="nav-icon"
-          >
-            <i class="fab fa-facebook"></i>
-          </a>
-        </li>
+            <!-- single icon -->
+            <li>
+              <a
+                href="https://www.facebook.com/malikabdullah.me"
+                target="_blank"
+                class="nav-icon"
+              >
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
             <!-- end of single icon -->
             <!-- single icon -->
-        <li>
-          <a
-                  href="https://www.twitter.com/malikabdcom"
-                  target="_blank"
-                  class="nav-icon"
-          >
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
+            <li>
+              <a
+                href="https://www.twitter.com/malikabdcom"
+                target="_blank"
+                class="nav-icon"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
             <!-- end of single icon -->
             <!-- single icon -->
-        <li>
-          <a
-                  href="https://www.github.com/malikabdcom"
-                  target="_blank"
-                  class="nav-icon"
-          >
-            <i class="fab fa-github"></i>
-          </a>
-        </li>
+            <li>
+              <a
+                href="https://www.github.com/malikabdcom"
+                target="_blank"
+                class="nav-icon"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
             <!-- end of single icon -->
-      </ul>
+          </ul>
           <!-- end of nav icons -->
         </div>
       </nav>
